src/tests/fixtures/comments/lineComment.invalid.ts.expected
-----------------
INPUT
----------------- 
// @gqlType
export default class Composer {
  // @gqlField
  url(): string {
    return `/composer/`;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/comments/lineComment.invalid.ts:1:4 - error: Unexpected Grats tag in line (`//`) comment. Grats looks for tags in JSDoc-style block comments. e.g. `/** @gqlType */`. For more information see: https://grats.capt.dev/docs/faq/comment-syntax

1 // @gqlType
     ~~~~~~~~
src/tests/fixtures/comments/lineComment.invalid.ts:3:6 - error: Unexpected Grats tag in line (`//`) comment. Grats looks for tags in JSDoc-style block comments. e.g. `/** @gqlType */`. For more information see: https://grats.capt.dev/docs/faq/comment-syntax

3   // @gqlField
       ~~~~~~~~~
